--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "build-dev": "npm-run-all build-dev:sass build:autoprefixer",
         "build-dev:sass": "sass --style=expanded --source-map src/sass:dist/css",
         "server": "json-server --port 3131 --no-cors --delay 250 --watch dist/db/app.json",
+        "watchsite": "npm-run-all build-dev -p watch:browsersync server",
+        "server": "json-server --port 3131 --no-cors --delay 250 --watch dist/db/app.json",
         "watch": "npm-run-all build build-dev -p watch:* server",
         "watch:browsersync": "browser-sync start --server dist --files \"dist/**/*\" --ignore \"dist/db/**/*\"",
         "watch:sassprefixer": "onchange \"src/sass/**/*.scss\" -- npm run build-dev",
