--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,9 @@
         ],
         "no-console": [
             "off"
+        ],
+        "no-unused-vars": [
+            "off"
         ]
     }
 }
