--- a/src/db/app.json
+++ b/src/db/app.json
@@ -3,7 +3,7 @@
      "events": [
      {
        "id": 1,
-       "date": "2021-01-01",
+       "date": "2021-01-03",
        "hour": "12:30",
        "table": 1,
        "repeat": false,
@@ -52,7 +52,17 @@
        "starters": ["lemonWater"]
      }
    ],
-   "bookings": [],
+   "bookings": [
+       {
+        "id": 5,
+        "date": "2021-01-01",
+        "hour": "18:00",
+        "table": 2,
+        "duration": 2,
+        "ppl": 3,
+        "starters": ["lemonWater"]
+      }
+  ],
    "products":[
       {
          "id":"cake",
