--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
         "build-dev:sass": "sass --style=expanded --source-map src/sass:dist/css",
         "server": "json-server --port 3131 --no-cors --delay 250 --watch dist/db/app.json",
         "watchsite": "npm-run-all build-dev -p watch:browsersync server",
-        "server": "json-server --port 3131 --no-cors --delay 250 --watch dist/db/app.json",
         "watch": "npm-run-all build build-dev -p watch:* server",
         "watch:browsersync": "browser-sync start --server dist --files \"dist/**/*\" --ignore \"dist/db/**/*\"",
         "watch:sassprefixer": "onchange \"src/sass/**/*.scss\" -- npm run build-dev",
@@ -50,6 +49,7 @@
         "stylelint-scss": "^3.5.4"
     },
     "dependencies": {
+        "flickity": "^2.3.0",
         "json-server": "^0.17.0"
     }
 }
